# Procedural-Game-Asset-Foundry

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  routes.py
backend/app/api/endpoints/: assets.py  generation.py  health.py
backend/app/core/: config.py  database.py  exceptions.py  logging.py
backend/app/schemas/: __init__.py  asset.py  fibo.py
backend/app/services/: asset_service.py  bria_fibo_service.py  comfyui_service.py  enhanced_mock_service.py  external_ai_service.py  fibo_service.py  generation_orchestrator.py  improved_local_ai_service.py  local_ai_service.py  realistic_local_ai_service.py  storage_service.py  validation_service.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AssetCanvas.tsx  AssetHistory.tsx  ControlPanel.tsx  JSONInspector.tsx  TopBar.tsx
frontend/src/components/controls/: BaseControls.tsx  EnvironmentControls.tsx  ImplementationGuide.md  NPCPortraitControls.tsx  UIControlMapping.md  WeaponItemControls.tsx
frontend/src/hooks/: useAssetGeneration.ts
frontend/src/services/: api.ts
frontend/src/types/: fibo.ts
schemas/: README.md  fibo_schemas.json  validation_guide.md
schemas/examples/: environment_concept_examples.json  npc_portrait_examples.json  weapon_item_examples.json
